# NeMo-Run

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  pyproject.toml  requirements-docs.txt  ruff.toml
.cursor/rules/: docs-assist-merge-conflict-resolution.mdc  docs-bump-version.mdc  docs-check-source.mdc  docs-info-verification.mdc  docs-os.mdc  docs-personas.mdc  docs-style-guide.mdc  docs-tooling.mdc
.github/workflows/: build-test-publish-wheel.yml  codeql.yml  detect-new-secrets.yml  install.yml  nightly.yml  release-freeze.yml  release.yml  ruff-format.yml  ruff-lint.yml  rye-format.yml  rye-lint.yml  rye-test.yml  spelling.yml  test.yml
.github/workflows/config/: codeql.yml  typos.toml  typos.yml
archive/docs/source/: faqs.md  index.rst
docs/: Makefile  README.md  conf.py  configuration.md  execution.md  faqs.md  index.md  management.md  nemo-run-index.md  project.json  ray.md  test_json_output.py  troubleshooting.md  versions1.json
docs/_extensions/: __init__.py  myst_codeblock_substitutions.py
docs/_extensions/ai_assistant/: README.md  __init__.py
docs/_extensions/content_gating/: README.md  __init__.py  condition_evaluator.py  conditional_directives.py  document_filter.py
docs/_extensions/json_output/: README.md  __init__.py  config.py  utils.py
docs/_extensions/search_assets/: __init__.py  enhanced-search.css  main.js
docs/about/: index.md  key-features.md  why-nemo-run.md
docs/about/concepts/: autoconvert.md  cli.md  (+7 more)
docs/admin/: index.md
docs/cli/: index.md
docs/configuration/: index.md
docs/deploy/: admin.md  index.md  ray.md
docs/execution/: index.md
docs/experiments/: index.md
docs/feature-set-a/: index.md
docs/feature-set-b/: index.md
docs/get-started/: feature-set-a.md  feature-set-b.md  index.md  install.md  tutorials.md
docs/guides/: admin.md  cli.md  configuration.md  execution.md  index.md  management.md  packaging.md  ray.md
docs/packaging/: index.md
docs/reference/: cli.md  faqs.md  index.md
docs/source/: conf.py  execution_review.md  faqs.md  index.rst  index_review.rst
docs/tunneling/: index.md
examples/: custom-values.yaml
examples/docker/: hello_docker.py
examples/entrypoint/: README.md  experiment.py  model.yaml  task.py  task.toml  task.yaml  task_with_defaults.py  test.toml
examples/experiments/: fork.py  inspect-experiment.ipynb
examples/hello-world/: hello_experiments.ipynb  hello_scripts.py  hello_world.ipynb
examples/k8s-hello-world/: Chart.yaml  README.md  values.yaml
nemo_run/: __init__.py  __main__.py  api.py  config.py  help.py  lazy.py  package_info.py
nemo_run/cli/: __init__.py  api.py  cli_parser.py  config.py  devspace.py  experiment.py  lazy.py  workspace.py
nemo_run/devspace/: __init__.py  base.py  editor.py
nemo_run/run/: api.py  experiment.py  job.py  logs.py  plugin.py  utils.py
nemo_run/tools/: kuberay_rbac.py
src/nemo_run/: __init__.py  __main__.py  api.py  config.py  exceptions.py  help.py  lazy.py  package_info.py
test/: conftest.py  dummy_factory.py  dummy_script.py  dummy_type.py  test_api.py  test_config.py  test_lazy.py  test_utils.py
test/cli/: test_api.py  test_cli_parser.py  test_config.py  test_grammar.py  test_lazy.py
test/core/: test_cli_parser.py  test_lark_parser.py
test/devspace/: test_base.py  test_editor.py
test/io/: test_api.py
test/run/: test_experiment.py  test_job.py  test_logs.py  test_utils.py
(+273 files in other folders)
